--- a/Avoider-Game-HTML5-master/css/style.css
+++ b/Avoider-Game-HTML5-master/css/style.css
@@ -61,6 +61,11 @@ a
     transition: color var(--transition-speed) ease;
 }
 
+p 
+{
+  word-spacing: 0.2em; /* or 5px */
+}
+
 /* ------------------------------------------------------------------ */
 /* Top Menu */
 /* ------------------------------------------------------------------ */
