--- a/Avoider-Game-HTML5-master/css/style.css
+++ b/Avoider-Game-HTML5-master/css/style.css
@@ -32,7 +32,7 @@
     --glass-blur: blur(4px);
 
     /* Assets */
-    --image-url: url(../assets/sprites/space3.jpg);
+    --image-url: url(../assets/sprites/space.jpg);
 }
 
 /* ------------------------------------------------------------------ */
